# rus_job_vacansy_parser

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  alembic.ini  compose.infra.yml  compose.yml  pyproject.toml  req.http  test_direct.py  test_full.py
.mimocode/plans/: 1783347012337-neon-meadow.md
alembic/: env.py
alembic/versions/: 2026_06_13__15:36__init.py
src/: config.py  main.py  mcp_server.py  test_publish.py
src/app/: container.py
src/app/usecases/: get_vacancies.py  parse_vacancies.py  update_vacancies.py
src/core/: schema.py  vacancy_reposytory.py
src/core/base/: base_cache.py  base_database.py  base_lifespan.py  base_parser.py  base_vacancy_reposytory.py
src/domain/: habr.py  hh.py  rabota.py  superjob.py  zarplata.py
src/infra/: browser.py  cache.py  logger.py
src/infra/database/: database_provider.py  models.py
src/parsers/: zarplata.py
src/tests/: test_parsers_integration.py
src/transport/amqp/: handler.py  mq_provider.py
src/transport/redis/: status_flag.py  vacancy_sink.py
tests/: test_parsers.py
