[project]
name = "hh-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrey Chiz", email = "andrey.chizhov.dev@yandex.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.0.0",
    "aiocache>=0.12.3",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "playwright>=1.60.0",
    "playwright-firefox>=1.0.4",
    "playwright-stealth>=2.0.3",
    "pydantic>=2.13.4",
    "redis>=8.0.0",
    "rich>=15.0.0",
]



